--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div class="contact-item">
           <i class="fas fa-map-marker-alt"></i>
           <h3>Location</h3>
-          <p>Jaipur, Rajasthan</p>
+          <p>Jhunjhunu, Rajasthan</p>
         </div>
       </div>
       <form class="contact-form">
