third commit index.html

--- a/index.html
+++ b/index.html
@@ -140,6 +140,102 @@
     </div>
   </section>
 
+  <!-- Skills Section -->
+  <section id="skills" class="skills">
+    <div class="section-header">
+      <h2>Skills</h2>
+      <div class="underline"></div>
+    </div>
+    <div class="skills-wrapper">
+      <!-- Programming Languages -->
+      <div class="skill-box">
+        <div class="skill-title">
+          <h3>Programming Languages</h3>
+        </div>
+        <div class="skill-content">
+          <div class="skill-item">
+            <i class="fab fa-python"></i>
+            <p>Python</p>
+          </div>
+          <div class="skill-item">
+            <i class="fab fa-java"></i>
+            <p>Java</p>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-code"></i>
+            <p>C</p>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-code"></i>
+            <p>C++</p>
+          </div>
+          <div class="skill-item">
+            <i class="fab fa-html5"></i>
+            <p>HTML</p>
+          </div>
+          <div class="skill-item">
+            <i class="fab fa-css3-alt"></i>
+            <p>CSS</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Data Science Libraries -->
+      <div class="skill-box">
+        <div class="skill-title">
+          <h3>Data Science Libraries</h3>
+        </div>
+        <div class="skill-content">
+          <div class="skill-item">
+            <i class="fas fa-chart-bar"></i>
+            <p>NumPy</p>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-table"></i>
+            <p>Pandas</p>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-chart-line"></i>
+            <p>Matplotlib</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Tools -->
+      <div class="skill-box">
+        <div class="skill-title">
+          <h3>Tools</h3>
+        </div>
+        <div class="skill-content">
+          <div class="skill-item">
+            <i class="fab fa-git-alt"></i>
+            <p>Git</p>
+          </div>
+          <div class="skill-item">
+            <i class="fab fa-github"></i>
+            <p>GitHub</p>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-code"></i>
+            <p>VS Code</p>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-terminal"></i>
+            <p>Cursor</p>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-paper-plane"></i>
+            <p>Postman</p>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-laptop-code"></i>
+            <p>Anaconda</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Projects Section -->
   <section id="projects" class="projects">
     <div class="section-header">
