--- a/index.html
+++ b/index.html
@@ -246,36 +246,34 @@
     <div class="projects-grid">
       <!-- Data Science Project -->
       <div class="project-card">
-        <div class="project-content">
-          <h3>AI Image Recognition System</h3>
-          <p>Advanced image recognition system using deep learning to classify and analyze images in real-time. Built with state-of-the-art CNN architecture.</p>
-          <div class="project-tech">
-            <span>Python</span>
-            <span>TensorFlow</span>
-            <span>OpenCV</span>
-            <span>Deep Learning</span>
+        <a href="https://github.com/Vikasyadav999/portfolio.git" target="_blank" class="project-link">
+          <div class="project-content">
+            <h3>AI Image Recognition System</h3>
+            <p>Advanced image recognition system using deep learning to classify and analyze images in real-time. Built with state-of-the-art CNN architecture.</p>
+            <div class="project-tech">
+              <span>Python</span>
+              <span>TensorFlow</span>
+              <span>OpenCV</span>
+              <span>Deep Learning</span>
+            </div>
           </div>
-          <div class="project-links">
-            <a href="coming-soon.html" target="_blank"><i class="fas fa-external-link-alt"></i> View Project</a>
-          </div>
-        </div>
+        </a>
       </div>
 
       <!-- Web Dev Project -->
       <div class="project-card">
-        <div class="project-content">
-          <h3>Smart Portfolio Website</h3>
-          <p>Modern and responsive portfolio website with dynamic content loading, smooth animations, and interactive UI components.</p>
-          <div class="project-tech">
-            <span>HTML5</span>
-            <span>CSS3</span>
-            <span>JavaScript</span>
-            <span>Responsive Design</span>
+        <a href="https://github.com/Vikasyadav999/portfolio.git" target="_blank" class="project-link">
+          <div class="project-content">
+            <h3>Smart Portfolio Website</h3>
+            <p>Modern and responsive portfolio website with dynamic content loading, smooth animations, and interactive UI components.</p>
+            <div class="project-tech">
+              <span>HTML5</span>
+              <span>CSS3</span>
+              <span>JavaScript</span>
+              <span>Responsive Design</span>
+            </div>
           </div>
-          <div class="project-links">
-            <a href="coming-soon.html" target="_blank"><i class="fas fa-external-link-alt"></i> View Project</a>
-          </div>
-        </div>
+        </a>
       </div>
     </div>
   </section>
